Add interactive setting inputs in results notebook

--- a/results.ipynb
+++ b/results.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,23 +53,50 @@
      "output_type": "stream",
      "text": [
       "INFO:tensorflow:Restoring parameters from /home/kacper/Pulpit/Rozwoj/Science/KamratKielak/GMIE/gmie/../saved-models/feedforwad_nn_18_lrelu\n",
-      "INFO:tensorflow:Restoring parameters from /home/kacper/Pulpit/Rozwoj/Science/KamratKielak/GMIE/gmie/../saved-models/quadratic_regression\n",
-      "Outputs after denormalizations: 0.08618229\n",
-      "Outputs after denormalizations: 0.08618229\n"
+      "INFO:tensorflow:Restoring parameters from /home/kacper/Pulpit/Rozwoj/Science/KamratKielak/GMIE/gmie/../saved-models/quadratic_regression\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8a858487d3564136922803af93475835",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=750, description='Diameter:', max=1400, min=100, step=5), SelectionSlide…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "inputs = np.array([[750, 0, 0]])\n",
+    "from ipywidgets import widgets as iws\n",
+    "from ipywidgets.widgets import interact\n",
     "\n",
-    "with tf.Session() as sess:\n",
-    "    sess.run(tf.global_variables_initializer())\n",
-    "    [s.restore(sess, os.path.join(SAVE_DIR, name)) for name, s in savers]\n",
+    "from gmie.mains import MainModel\n",
+    "\n",
+    "sess = tf.Session()\n",
+    "sess.run(tf.global_variables_initializer())\n",
+    "[s.restore(sess, os.path.join(SAVE_DIR, name)) for name, s in savers]\n",
+    "\n",
+    "@interact(\n",
+    "    diameter=iws.IntSlider(value=750, min=100, max=1400, \n",
+    "                           step=5, description='Diameter:'),\n",
+    "    model=iws.SelectionSlider(options=['reduced', 'standard', 'elevated'],\n",
+    "                              value='standard', description='Model:'),\n",
+    "    pressure=iws.FloatSlider(value=4.4, min=2.0, max=7.0, \n",
+    "                             step=0.01, description='Pressure')\n",
+    ")\n",
+    "def run_model(diameter, model, pressure):\n",
+    "    model = MainModel[model.upper()]\n",
+    "    inputs = np.array([[diameter, model.value, pressure]])\n",
     "    for model in all_models:\n",
-    "        norm_inputs = model.normalize_inputs(denorm_inputs, sess)\n",
+    "        norm_inputs = model.normalize_inputs(inputs, sess)\n",
     "        output = model.predict(norm_inputs, sess)\n",
     "        denorm_output = model.denormalize_outputs(output, sess)[0][0]\n",
-    "        print('Outputs after denormalizations:', norm_output)"
+    "        print('Outputs after denormalizations:', denorm_output)"
    ]
   },
   {
