Modify results notebook to output pdf output plot

--- a/results.ipynb
+++ b/results.ipynb
@@ -20,8 +20,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[None, None]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import logging\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "\n",
@@ -29,37 +41,64 @@
     "from gmie.preprocessing import *\n",
     "\n",
     "\n",
+    "logging.getLogger('tensorflow').setLevel(logging.WARNING)\n",
     "all_models = TRAINING_MODELS + SOLVABLE_MODELS\n",
     "collections = [(model.name,\n",
     "                tf.get_collection(tf.GraphKeys.GLOBAL_VARIABLES, scope=model.name))\n",
     "               for model in all_models]\n",
-    "savers = [(name, tf.train.Saver(var_list=coll)) for name, coll in collections]"
+    "savers = [(name, tf.train.Saver(var_list=coll)) for name, coll in collections]\n",
+    "\n",
+    "sess = tf.Session()\n",
+    "sess.run(tf.global_variables_initializer())\n",
+    "[s.restore(sess, os.path.join(SAVE_DIR, name)) for name, s in savers]"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "### Start tensorflow session"
+    "### Prepare notebook visualization environment"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipywidgets import widgets as iws\n",
+    "from ipywidgets.widgets import interact\n",
+    "from matplotlib import pyplot as plt\n",
+    "from scipy import stats\n",
+    "\n",
+    "from gmie.mains import MainModel\n",
+    "\n",
+    "\n",
+    "def plot_gaussian(mean, variance):\n",
+    "    sigma = math.sqrt(variance)\n",
+    "    x = np.linspace(mean - 3*sigma, mean + 3*sigma, 100)\n",
+    "    plt.plot(x, stats.norm.pdf(x, mean, sigma))\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run models and visualise outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Restoring parameters from /home/kacper/Pulpit/Rozwoj/Science/KamratKielak/GMIE/gmie/../saved-models/feedforwad_nn_18_lrelu\n",
-      "INFO:tensorflow:Restoring parameters from /home/kacper/Pulpit/Rozwoj/Science/KamratKielak/GMIE/gmie/../saved-models/quadratic_regression\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a858487d3564136922803af93475835",
+       "model_id": "903063195f8a4dc5bf7e8334b8b8d974",
        "version_major": 2,
        "version_minor": 0
       },
@@ -72,15 +111,6 @@
     }
    ],
    "source": [
-    "from ipywidgets import widgets as iws\n",
-    "from ipywidgets.widgets import interact\n",
-    "\n",
-    "from gmie.mains import MainModel\n",
-    "\n",
-    "sess = tf.Session()\n",
-    "sess.run(tf.global_variables_initializer())\n",
-    "[s.restore(sess, os.path.join(SAVE_DIR, name)) for name, s in savers]\n",
-    "\n",
     "@interact(\n",
     "    diameter=iws.IntSlider(value=750, min=100, max=1400, \n",
     "                           step=5, description='Diameter:'),\n",
@@ -96,7 +126,11 @@
     "        norm_inputs = model.normalize_inputs(inputs, sess)\n",
     "        output = model.predict(norm_inputs, sess)\n",
     "        denorm_output = model.denormalize_outputs(output, sess)[0][0]\n",
-    "        print('Outputs after denormalizations:', denorm_output)"
+    "        variance = model.get_denorm_variance(sess)[0]\n",
+    "        print(f'{model.name}:')\n",
+    "        print('mean:', denorm_output)\n",
+    "        print('variance:', variance)\n",
+    "        plot_gaussian(denorm_output, variance)"
    ]
   },
   {
