Modify results notebook to take std main price
Based on which the expected price of mains is calculated

--- a/results.ipynb
+++ b/results.ipynb
@@ -20,18 +20,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[None, None]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import logging\n",
     "import numpy as np\n",
@@ -50,11 +39,11 @@
     "\n",
     "sess = tf.Session()\n",
     "sess.run(tf.global_variables_initializer())\n",
-    "[s.restore(sess, os.path.join(SAVE_DIR, name)) for name, s in savers]"
+    "_ = [s.restore(sess, os.path.join(SAVE_DIR, name)) for name, s in savers]"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Prepare notebook visualization environment"
@@ -90,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -98,12 +87,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "903063195f8a4dc5bf7e8334b8b8d974",
+       "model_id": "6a1986b5eae847c8b3943c49f1d788ce",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=750, description='Diameter:', max=1400, min=100, step=5), SelectionSlide…"
+       "interactive(children=(FloatText(value=4320.0, description='Standard (700mm, standard, 4.4MPa pressure) main pr…"
       ]
      },
      "metadata": {},
@@ -111,15 +100,20 @@
     }
    ],
    "source": [
+    "style = {'description_width': 'initial'}\n",
+    "layout = {'width': '500px'}\n",
     "@interact(\n",
-    "    diameter=iws.IntSlider(value=750, min=100, max=1400, \n",
-    "                           step=5, description='Diameter:'),\n",
+    "    std_main_price=iws.FloatText(value=4320, style=style, layout=layout,\n",
+    "                                 description='Standard (700mm, standard, '\n",
+    "                                             '4.4MPa pressure) main price'),\n",
+    "    diameter=iws.BoundedIntText(value=750, min=100, max=1400, \n",
+    "                                  step=5, description='Diameter:'),\n",
     "    model=iws.SelectionSlider(options=['reduced', 'standard', 'elevated'],\n",
     "                              value='standard', description='Model:'),\n",
-    "    pressure=iws.FloatSlider(value=4.4, min=2.0, max=7.0, \n",
-    "                             step=0.01, description='Pressure')\n",
+    "    pressure=iws.BoundedFloatText(value=4.4, min=2.0, max=7.0, \n",
+    "                                  step=0.1, description='Pressure')\n",
     ")\n",
-    "def run_model(diameter, model, pressure):\n",
+    "def predict_price(std_main_price, diameter, model, pressure):\n",
     "    model = MainModel[model.upper()]\n",
     "    inputs = np.array([[diameter, model.value, pressure]])\n",
     "    for model in all_models:\n",
@@ -127,10 +121,36 @@
     "        output = model.predict(norm_inputs, sess)\n",
     "        denorm_output = model.denormalize_outputs(output, sess)[0][0]\n",
     "        variance = model.get_denorm_variance(sess)[0]\n",
+    "        \n",
+    "        price = (1 + denorm_output) * std_main_price\n",
+    "        price_variance = (std_main_price**2) * variance\n",
+    "        \n",
     "        print(f'{model.name}:')\n",
-    "        print('mean:', denorm_output)\n",
-    "        print('variance:', variance)\n",
-    "        plot_gaussian(denorm_output, variance)"
+    "        print('mean:', price)\n",
+    "        print('variance:', price_variance)\n",
+    "        plot_gaussian(price, price_variance)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br/>\n",
+    "<br/>\n",
+    "<br/>\n",
+    "<br/>\n",
+    "<br/>\n",
+    "<br/>\n",
+    "<br/>\n",
+    "<br/>\n",
+    "<br/>\n",
+    "<br/>\n",
+    "<br/>\n",
+    "<br/>\n",
+    "<br/>\n",
+    "<br/>\n",
+    "<br/>\n",
+    "<br/>"
    ]
   },
   {
